更新ImageGenerate函数，调用新增的ImageGenerate.py实现绘制相关性图形

--- a/task_1_SignalAnalyze/task_1_SignalAnalyze.vcxproj
+++ b/task_1_SignalAnalyze/task_1_SignalAnalyze.vcxproj
@@ -128,14 +128,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Message.cpp" />
     <ClCompile Include="SignalAnalyze.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Message.h" />
     <ClInclude Include="SignalAnalyze.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ImageGenerate.py" />
     <None Include="课程资料\180308204701120_第一次实验数据.rar" />
     <None Include="课程资料\通信软件基础B-移动通信中的算法问题.pptx" />
     <None Include="课程资料\重庆邮电大学实验报告.doc" />
